added new pages

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/zone.js@0.7.4?main=browser"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/4.1.0/rx.all.js"></script>
   <script src="https://unpkg.com/systemjs@0.19.39/dist/system.src.js"></script>
-  <script src="systemjs.config.js"></script>
+  <!-- <script src="systemjs.config.js"></script> -->
 </head>
 <body>
   <app-root>Loding.....</app-root>
